# chessforyou

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: game_app_service.rs  mod.rs  player_app_service.rs
src/controller/: game_controller.rs  mod.rs  player_controller.rs
src/infrastructure/: game_repository.rs  mod.rs  player_repository.rs
src/model/: mod.rs
src/model/allowed_movement/: mod.rs
src/model/check_verifier/: mod.rs
src/model/move_calculator/: bishop_move_calculator.rs  king_move_calculator.rs  knight_move_calculator.rs  mod.rs  pawn_move_calculator.rs  queen_move_calculator.rs  rook_move_calculator.rs
src/model/movement/: mod.rs
